--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.22",
-    "@react-navigation/native-stack": "^7.8.1",
+    "@react-navigation/native-stack": "^7.8.2",
     "expo": "~54.0.25",
     "expo-av": "~16.0.7",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.2"
   },
   "private": true
 }
