--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.8.5",
     "expo": "~54.0.25",
     "expo-av": "~16.0.7",
+    "expo-image-picker": "^17.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
