--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
-    "expo": "~54.0.25",
+    "expo": "^54.0.27",
     "expo-av": "~16.0.7",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.9",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "^3.0.15",
     "firebase": "^12.6.0",
-    "react": "19.1.0",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "0.81.5",
+    "react-native": "^0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.2",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.15.0",
     "react-native-youtube-iframe": "^2.4.1"
   },
