--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@react-navigation/native-stack": "^7.8.5",
     "expo": "~54.0.25",
     "expo-av": "~16.0.7",
+    "expo-image-manipulator": "^14.0.8",
     "expo-image-picker": "^17.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.6.0",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.2"
+    "react-native-web": "^0.21.2",
+    "react-native-webview": "^13.16.0",
+    "react-native-youtube-iframe": "^2.4.1"
   },
   "private": true
 }
